--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Домашние задания по курсу JavaScript Уровень 2 Geekbrains",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/heydaywebsite/JS-2/issues"
   },
-  "homepage": "https://github.com/heydaywebsite/JS-2#readme"
+  "homepage": "https://github.com/heydaywebsite/JS-2#readme",
+  "devDependencies": {
+    "webpack": "^5.6.0",
+    "webpack-cli": "^4.2.0"
+  }
 }
